--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "Tailwind-components",
+  "name": "tailwind-components",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "vite"
@@ -14,5 +13,14 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rihem-bensaad/Tailwind-CSS-Button.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rihem-bensaad/Tailwind-CSS-Button/issues"
+  },
+  "homepage": "https://github.com/rihem-bensaad/Tailwind-CSS-Button#readme",
+  "description": ""
 }
