--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
+    "postcss-import": "^15.0.0",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.6"
   },
